objects/DMAPP__AM_Plan_Unit__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>DMAPP__DM_Account_Plan__c</referenceTo>
        <relationshipLabel>Plan Units</relationshipLabel>
        <relationshipName>Plan_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Account_Political_Map__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Political Map</label>
        <referenceTo>DMAPP__Account_Political_Map__c</referenceTo>
        <relationshipLabel>Plan Units</relationshipLabel>
        <relationshipName>Plan_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plan Units</relationshipLabel>
        <relationshipName>Account_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Level_Of_Relationship__c</fullName>
        <label>Level Of Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credible Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Solver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trusted Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Parent_Plan_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Plan Unit</label>
        <referenceTo>DMAPP__AM_Plan_Unit__c</referenceTo>
        <relationshipLabel>Plan Units</relationshipLabel>
        <relationshipName>Child_Plan_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Count__c</fullName>
        <label>Potential Count</label>
        <summaryFilterItems>
            <field>DMAPP__Unit_Solution_Opp__c.DMAPP__Is_Potential__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>DMAPP__Unit_Solution_Opp__c.DMAPP__Plan_Unit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Potential_Total__c</fullName>
        <label>Potential Total</label>
        <summarizedField>DMAPP__Unit_Solution_Opp__c.DMAPP__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>DMAPP__Unit_Solution_Opp__c.DMAPP__Is_Potential__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>DMAPP__Unit_Solution_Opp__c.DMAPP__Plan_Unit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Targeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_To_Them__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value To Them</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Value_To_Us__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value To Us</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plan Unit</label>
    <nameField>
        <label>Plan Unit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>